fix settings and language card margin alignment to clear logo

--- a/css/pages/languages.css
+++ b/css/pages/languages.css
@@ -8,6 +8,7 @@
     border-radius: 15px;
     width: 320px;
     text-align: center;
+    margin-top: 60px;
 }
 
 .header-title {
