--- a/css/pages/settings.css
+++ b/css/pages/settings.css
@@ -9,6 +9,7 @@
     width: 300px;
     text-align: center;
     backdrop-filter: blur(10px);
+    margin-top: 60px;
 }
 
 .login-title {
